minor layout bug fixed

--- a/app/assets/stylesheets/register.scss
+++ b/app/assets/stylesheets/register.scss
@@ -12,6 +12,7 @@
   padding: 5px 30px;
   margin-top: 30px;
   color: #331670;
+  margin-left: 30px;
   border: none;
 }
 
@@ -20,8 +21,13 @@
   border: none;
 }
 
+.d-flex {
+  border-right: 1px solid #fff;
+}
+
 .white-link {
   color: #fff;
+  padding-left: 30px;
 }
 
 .white-link:hover {
@@ -36,6 +42,7 @@
 .sign-up {
   text-align: center;
   margin-bottom: 30px;
+  padding-left: 30px;
 }
 
 .company-name {
